--- a/css/news.css
+++ b/css/news.css
@@ -1,3 +1,30 @@
+.center {
+    max-width: 1000px; 
+    margin: 0 auto;
+    padding: 20px;
+}
+
+/* コンテンツを中央に */
+.center-content {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.h2-center {
+    text-align: center;
+    margin: 0;
+}
+
+/* ------------------------------------- */
+/* コンテナ幅の固定 */
+/* ------------------------------------- */
+.form-container {
+    width: 100%; 
+    max-width: 500px;
+    margin: 0 auto; 
+}
+
 /* ------------------------------------- */
 /* お知らせリスト（スクロールつき） */
 /* ------------------------------------- */
@@ -37,13 +64,13 @@
 .notification-box {
     display: block;
     padding: 15px;
-    width: 80%;
+
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 
-    text-align: left;
+    text-align: center;
     text-decoration: none;
     color: #333;
 
